--- a/client/src/main/res/layout/activity_home.xml
+++ b/client/src/main/res/layout/activity_home.xml
@@ -28,6 +28,7 @@
             android:textColorHint="@color/gray"
             android:hint="IP Address"
             android:layout_marginBottom="10dp"
+            android:inputType="text"
             android:textSize="17sp" />
 
         <androidx.appcompat.widget.AppCompatEditText
@@ -49,6 +50,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:text="Connect to Server" />
+
 
     </LinearLayout>
 
