--- a/server/src/main/res/layout/activity_home.xml
+++ b/server/src/main/res/layout/activity_home.xml
@@ -7,22 +7,39 @@
     android:padding="10dp"
     tools:context=".HomeActivity">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_info"
+    <LinearLayout
+        android:id="@+id/content_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
         android:background="@drawable/bg_content"
-        android:fontFamily="sans-serif-medium"
         android:paddingStart="20dp"
         android:paddingTop="20dp"
         android:paddingEnd="20dp"
         android:paddingBottom="20dp"
-        android:textColor="@color/black"
-        android:textSize="17sp" />
+        android:layout_marginBottom="20dp">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
+
+        <Button
+            android:id="@+id/btn_start"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Start Server" />
+
+    </LinearLayout>
 
     <ScrollView
-        android:layout_below="@id/tv_info"
+        android:layout_below="@id/content_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/btnSend"
@@ -54,10 +71,10 @@
         android:id="@+id/btnSend"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:text="Send"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"/>
+        android:text="Send" />
 
 </RelativeLayout>
